<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/video"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <View
            android:id="@+id/video_title_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/video_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/audio_by_url_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/audio_by_url"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/audio_title_line"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/audio_by_url_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_url"
            android:inputType="textUri"
            android:text="@string/test_url_audio"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/audio_by_url_button"
            app:layout_constraintTop_toBottomOf="@id/audio_by_url_tv" />

        <Button
            android:id="@+id/audio_by_url_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/ok"
            app:layout_constraintLeft_toRightOf="@id/audio_by_url_et"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/audio_by_url_tv" />

        <TextView
            android:id="@+id/download_audio_by_url_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/download_audio_by_url"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/audio_by_url_et" />

        <EditText
            android:id="@+id/download_audio_by_url_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_url"
            android:inputType="textUri"
            android:text="@string/test_url_audio"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/download_audio_by_url_tv" />

        <Button
            android:id="@+id/download_audio_by_url_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/ok"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/download_audio_by_url_et" />

        <ProgressBar
            android:id="@+id/download_audio_by_url_pb"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/download_audio_by_url_button"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/download_audio_by_url_et" />


        <Button
            android:id="@+id/choose_audio_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/download_audio_by_url_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="8dp"
            android:text="@string/choose_audio_from_storage"/>

        <TextView
            android:id="@+id/audio_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/audio"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_video_storage"
            app:layout_constraintVertical_chainStyle="packed" />

        <View
            android:id="@+id/audio_title_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/audio_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/watch_video_by_url_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/watch_video_by_url"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_title_line"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/watch_video_by_url_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_url"
            android:text="@string/test_url_95mb"
            android:inputType="textUri"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/watch_video_by_url_button"
            app:layout_constraintTop_toBottomOf="@id/watch_video_by_url_tv" />

        <Button
            android:id="@+id/watch_video_by_url_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/ok"
            app:layout_constraintLeft_toRightOf="@id/watch_video_by_url_et"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/watch_video_by_url_tv" />

        <TextView
            android:id="@+id/download_video_by_url_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/download_video_by_url"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/watch_video_by_url_et"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/download_video_by_url_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_url"
            android:inputType="textUri"
            android:text="@string/test_url_95mb"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/download_video_by_url_tv" />

        <Button
            android:id="@+id/download_video_by_url_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/ok"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/download_video_by_url_et" />

        <ProgressBar
            android:id="@+id/download_video_by_url_pb"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/download_video_by_url_button"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/download_video_by_url_et" />


        <Button
            android:id="@+id/choose_video_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/download_video_by_url_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="8dp"
            android:text="@string/choose_video_from_storage"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
